--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "type": "commonjs",
   "dependencies": {
     "@aws-sdk/client-textract": "^3.840.0",
+    "@prisma/client": "^6.12.0",
     "axios": "^1.10.0",
     "dotenv": "^17.1.0",
     "express": "^5.1.0",
@@ -25,6 +26,7 @@
     "@types/ioredis": "^4.28.10",
     "@types/node": "^24.0.12",
     "esbuild": "^0.25.6",
+    "prisma": "^6.12.0",
     "typescript": "^5.8.3"
   }
 }
