--- a/myLedger/apps/worker/package.json
+++ b/myLedger/apps/worker/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node src/index.js"
+    "build": "npx esbuild src/index.ts --bundle --outfile=dist/index.js --platform=node --tsconfig=tsconfig.json",
+    "start": "node dist/index.js",
+    "dev": "npm run build && npm run start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
+  "type": "commonjs",
   "dependencies": {
+    "@repo/redis": "workspace:",
     "bullmq": "^5.56.5",
     "dotenv": "^17.2.0",
     "puppeteer": "^24.14.0"
