--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,7 +1,8 @@
 name: CI Build and Push
 
 on:
-  workflow_call:
+  push:
+    branches: [ production ]
 
 jobs:
   build:
@@ -20,14 +21,14 @@ jobs:
       - name: Build and push Backend Docker image
         run: |
           IMAGE=myLedger-backend:${{ github.sha }}
-          docker build -f myLedger/apps/backend/Dockerfile -t $IMAGE apps/backend
+          docker build -f apps/backend/Dockerfile -t $IMAGE apps/backend
           docker push $IMAGE
 
       # Build worker image
       - name: Build and push Worker Docker image
         run: |
           IMAGE=myLedger-worker:${{ github.sha }}
-          docker build -f myLedger/apps/worker/Dockerfile -t $IMAGE apps/worker
+          docker build -f apps/worker/Dockerfile -t $IMAGE apps/worker
           docker push $IMAGE
 
       # Update GitOps repo
