--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,14 +20,14 @@ jobs:
       # Build backend (API) image
       - name: Build and push Backend Docker image
         run: |
-          IMAGE=myLedger-backend:${{ github.sha }}
+          IMAGE=my-ledger-backend:${{ github.sha }}
           docker build -f myLedger/apps/backend/Dockerfile -t $IMAGE apps/backend
           docker push $IMAGE
 
       # Build worker image
       - name: Build and push Worker Docker image
         run: |
-          IMAGE=myLedger-worker:${{ github.sha }}
+          IMAGE=my-ledger-worker:${{ github.sha }}
           docker build -f myLedger/apps/worker/Dockerfile -t $IMAGE apps/worker
           docker push $IMAGE
 
