--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,7 +2,7 @@ name: CI Build and Push
 
 on:
   push:
-    branches: [ production ]
+    branches: [production]
 
 jobs:
   build:
@@ -21,14 +21,14 @@ jobs:
       - name: Build and push Backend Docker image
         run: |
           IMAGE=my-ledger-backend:${{ github.sha }}
-          docker build -f myLedger/apps/backend/Dockerfile -t $IMAGE apps/backend
+          docker build -f myLedger/apps/backend/Dockerfile -t $IMAGE myLedger/apps/backend
           docker push $IMAGE
 
       # Build worker image
       - name: Build and push Worker Docker image
         run: |
           IMAGE=my-ledger-worker:${{ github.sha }}
-          docker build -f myLedger/apps/worker/Dockerfile -t $IMAGE apps/worker
+          docker build -f myLedger/apps/worker/Dockerfile -t $IMAGE myLedger/apps/worker
           docker push $IMAGE
 
       # Update GitOps repo
