--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,10 +36,8 @@ jobs:
         run: |
           git clone https://x-access-token:${{ secrets.K8S_REPO_TOKEN }}@github.com/Kiteretzu/myledger-k8s.git
           cd myledger-k8s
-          # Update backend deployment
-          sed -i "s|image: myapp-backend:.*|image: myapp-backend:${{ github.sha }}|" deployment-backend.yaml
-          # Update worker deployment
-          sed -i "s|image: myapp-worker:.*|image: myapp-worker:${{ github.sha }}|" deployment-worker.yaml
+          sed -i "s|image: .*/my-ledger-worker:.*|image: ${{ secrets.DOCKER_USERNAME }}/my-ledger-worker:${{ github.sha }}|" deployment-worker.yaml
+          sed -i "s|image: .*/my-ledger-backend:.*|image: ${{ secrets.DOCKER_USERNAME }}/my-ledger-backend:${{ github.sha }}|" deployment-backend.yaml
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
           git commit -am "Update images to SHA ${{ github.sha }}"
