--- a/myLedger/apps/worker/package.json
+++ b/myLedger/apps/worker/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@repo/puppeteer_utils": "workspace:",
     "@repo/redis": "workspace:",
     "bullmq": "^5.56.5",
     "dotenv": "^17.2.0",
